add lesson 31 - 33