@@ -2,14 +2,12 @@ package app_30_collections_iterator;
 
 import app_24_oop_interfaces.Interfaces;
 
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
+import java.util.*;
 
 public class Iterators {
     public static void main(String[] args) {
-        Iterator<Integer> iterator_1 = new ArrayList<>(List.of(1, 2, 3, 4, 5)).iterator(); // List.of - не изменяемая коллекция (не доступен remove)
-        Iterator<Integer> iterator_2 = List.of(1, 2, 3, 4, 5).iterator(); // List.of - не изменяемая коллекция (не доступен remove)
+        Iterator<Integer> iterator_1 = new ArrayList<>(List.of(1, 2, 3, 4, 5)).iterator(); // List.of - не изменяемая коллекция (не доступен remove) ArrayList - делает изменяемую коллекцуию
+        Iterator<Integer> iterator_2 = Arrays.asList(1, 2, 3, 4, 5).iterator(); // List.of - не изменяемая коллекция (не доступен remove) Arrays.asList - делает изменяемую коллекцуию
         Iterator<Integer> iterator_3 = List.of(1, 2, 3, 4, 5).iterator(); // List.of - не изменяемая коллекция (не доступен remove)
 
         for (; iterator_1.hasNext();){
